--- a/HackathonTest/HackathonTest/Views/WebElement/CreateWebElement.cshtml
+++ b/HackathonTest/HackathonTest/Views/WebElement/CreateWebElement.cshtml
@@ -5,3 +5,10 @@
 
 <h2>CreateWebElement</h2>
 
+@using (Html.BeginForm("CreateWebElements", "WebElement", FormMethod.Post))
+{
+    <input type="text" name="IP" id="IP" />
+    <input type="text" name="Name" id="Name" />
+
+    <input type="submit" value="Login" />
+}
